# Physical-AI-Robotic-Book

./: .gitignore  404.html  CLAUDE.md  GEMINI.md  index.html  package-lock.json  sitemap.xml
.claude/: settings.local.json
.claude/agents/: better-auth-expert.md  chapter-planner.md
.github/workflows/: qa-workflow.yml  static.yml
.specify/memory/: constitution.md
AIdd-book/: .env.example  docusaurus.config.ts  package-lock.json  package.json
AIdd-book/docs/: glossary.md  intro.md  notation.md
assets/css/: styles.b87fc69f.css
assets/js/: 0277f5e8.40df539f.js  0e384e19.426b3ab4.js  12909800.25deeb60.js  17896441.43b6e773.js  1b7053ff.dee9e613.js  2135cc10.cb062fe3.js  25626d15.399f6fc2.js  (+24 more)
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
chat/: index.html
login/: index.html
markdown-page/: index.html
profile/: index.html
qa-automation/: .gitignore  FINAL_TEST_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  comprehensive_test.py  manual_browser_test.py  pyproject.toml
qa-automation/config/: aidd-book-backend-tests.yaml  aidd-book-frontend-tests.yaml  aidd-book-tests.yaml  backend-tests.yaml  default.yaml  frontend-tests.yaml
qa-automation/src/qa_automation/: __init__.py
qa-automation/src/qa_automation/analyzers/: __init__.py  grouping.py  root_cause.py  severity.py
qa-automation/src/qa_automation/cli/: __init__.py  main.py
qa-automation/src/qa_automation/detectors/: __init__.py  backend.py  base.py  frontend.py  performance.py
qa-automation/src/qa_automation/models/: __init__.py  issue.py  resolution.py  test_result.py  test_scenario.py  workflow.py
qa-automation/src/qa_automation/resolvers/: __init__.py  auto_fix.py  guidance.py  validator.py
qa-automation/src/qa_automation/services/: __init__.py  artifact_manager.py  auth_handler.py  reporter.py  workflow_engine.py
qa-automation/tests/fixtures/sample_backend/: main.py  requirements.txt
qa-automation/tests/fixtures/sample_frontend/: index.html
rag-chatbot/: Procfile  README.md  requirements.txt  start.sh
rag-chatbot/backend/: .env.development  .env.example  .env.local.template  .env.production  .gitignore  SETUP_GUIDE.md  add_response_summary_column.sql  alembic.ini  check_oauth_config.py  check_schema.py  pyproject.toml  start-server.sh  verify_auth_tables.py  verify_tables.py
rag-chatbot/backend/alembic/: env.py
rag-chatbot/backend/alembic/versions/: 001_initial_schema.py  002_add_i18n_support.py
rag-chatbot/backend/app/: config.py  main.py
rag-chatbot/backend/app/api/: __init__.py  chatkit.py  content.py  conversations.py  health.py  index.py  sessions.py  user.py
rag-chatbot/backend/app/models/: __init__.py  conversation.py  database.py  message.py  query_log.py  translation_cache.py
rag-chatbot/backend/app/services/: __init__.py  agent.py  chunker.py  embeddings.py  translation.py  translation_cache.py  vector_store.py
rag-chatbot/backend/app/tools/: __init__.py  retriever.py
rag-chatbot/backend/app/utils/: locale.py
rag-chatbot/backend/scripts/: apply_locale_migration.py  cleanup.py  index_textbook.py  init_qdrant.py  update_qdrant_schema.py
rag-chatbot/backend/tests/: __init__.py
register/: index.html
ur/: 404.html  index.html  sitemap.xml
(+426 files in other folders)
